--- a/index.html
+++ b/index.html
@@ -167,10 +167,14 @@
                 <div class="row">
                     <div class="col-lg-7 col-md-6">
                         <div class="about_content">
-                            <h2>Welcome to Danhill Construction</h2>
-                            <h3>Your Vision, Our Expertise</h3>
-                            <p>At DanhillCo, we specialize in construction and interior design, turning your dreams into reality. With years of experience and a commitment to quality, we ensure every project is completed to the highest standards.</p>
-                            <p>Our team collaborates closely with clients to understand their needs and preferences, crafting personalized solutions that enhance both beauty and functionality. Let us transform your space into something extraordinary.</p>
+                            <h2>Who We Are</h2>
+                            <p>With over a decade of experience, Danhill Construction is a premier architectural and interior design company based in Kenya. Our team of dedicated professionals specializes in delivering innovative and high-quality solutions to bring your visions to life.</p>
+                            
+                            <h3>Our Mission</h3>
+                            <p>To deliver innovative architectural and interior design solutions that exceed client expectations. By leveraging over a decade of experience and a commitment to excellence, we aim to transform visions into reality with precision, professionalism, and unparalleled quality.</p>
+                            
+                            <h3>Our Vision</h3>
+                            <p>To be the leading construction and design firm in Kenya, recognized for our dedication to craftsmanship, innovation, and client satisfaction. We strive to create spaces that inspire and elevate the human experience, setting new standards in the industry.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-lg-offset-1">
@@ -181,6 +185,7 @@
                 </div>
             </div>
         </section><!-- About end -->
+
 
         <!-- Why Choose Us -->
         <section id="why_us">
@@ -233,7 +238,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="service_item">
-                            <img src="images/service.jpg" height="200" alt="Architectural Drawings" />
+                            <img src="images/background.jpg" height="200" alt="Architectural Drawings" />
                             <h3>Architectural Drawings</h3>
                             <p>We craft detailed, innovative blueprints that are both aesthetically pleasing and structurally robust, serving as the foundation for your projects.</p>
                         </div>
@@ -247,14 +252,14 @@
                     </div>
                     <div class="col-md-4">
                         <div class="service_item">
-                            <img src="images/project (3).jpg" height="200" alt="Project Management" />
+                            <img src="images/project.jpg" height="200" alt="Project Management" />
                             <h3>Project Management</h3>
                             <p>From inception to completion, our project management services ensure every project runs smoothly, delivering on time and within budget.</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="service_item">
-                            <img src="images/service_hvac.jpg" height="200" alt="HVAC Services" />
+                            <img src="images/hvac.jpg" height="200" alt="HVAC Services" />
                             <h3>HVAC Services</h3>
                             <p>We provide top-tier HVAC solutions to ensure your buildings are equipped with efficient systems for optimal air quality and comfort.</p>
                         </div>
