--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="service_item">
-                            <img src="images/background.jpg" height="200" alt="Architectural Drawings" />
+                            <img src="images/architecture.jpg" height="200" alt="Architectural Drawings" />
                             <h3>Architectural Drawings</h3>
                             <p>We craft detailed, innovative blueprints that are both aesthetically pleasing and structurally robust, serving as the foundation for your projects.</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="service_item">
-                            <img src="images/service4.jpg" height="200" alt="Interior Design" />
+                            <img src="images/interior_design.jpg" height="200" alt="Interior Design" />
                             <h3>Interior Design</h3>
                             <p>We deliver bespoke interior design solutions that blend functionality with beauty, enhancing your quality of life.</p>
                         </div>
